fix: Saved searches in dropdown menu on mobile

--- a/packages/frontend/src/components/Header/search.module.css
+++ b/packages/frontend/src/components/Header/search.module.css
@@ -173,11 +173,12 @@ input:focus-visible {
 }
 
 .displayText {
-  color: var(--black-100, #000);
-  font-size: 16px;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  font-size: 14px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
+  font-weight: 500;
+  line-height: 20px;
 }
 
 .searchTermText {
@@ -232,6 +233,13 @@ input:focus-visible {
   margin-right: 10px;
 }
 
+.savedSearchItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /* margin: 0 1rem; */
+}
+
 .rightContent {
   display: flex;
   align-items: center;
@@ -247,6 +255,7 @@ input:focus-visible {
   display: flex;
   row-gap: 6px;
   column-gap: 6px;
+  flex-wrap: wrap;
 }
 
 .searchString {
@@ -265,6 +274,7 @@ input:focus-visible {
     width: calc(100% - 2rem);
     margin: 0 auto;
   }
+
   .searchbarContainer {
     padding-top: 0.5rem;
     width: calc(100% - 2rem);
